tests/src/frontend/typechecking/invalid/infer_frozen_met_5.sk
class Tester<T: frozen>(T) {
  fun foo(T): Array<T> {
    Array[]
  }
}

fun test(): void {
  Tester(mutable Array[]).foo(mutable Array[])
}
